@@ -1,5 +1,8 @@
 2009-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/txt.c (WriteTXTImage): Ensure that image depth is 8, 16,
+	or 32.
+
 	* www/formats.rst: Add CALS to formats list.
 
 	* coders/cals.c (RegisterCALSImage): Consolidate duplicate text
